[package]
name = "niloecl"
version = "0.1.0"
edition = "2021"
description = "An implementation of the axum handler pattern for twilight interactions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/randomairborne/niloecl"
readme = "README.md"
keywords = ["discord", "twilight", "extractors"]
categories = ["rust-patterns"]

[dependencies]
twilight-model = "0.16.0-rc.1"
