[package]
name = "niloecl"
version = "0.1.3"
edition = "2021"
description = "An implementation of the axum handler pattern for twilight interactions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/randomairborne/niloecl"
readme = "README.md"
keywords = ["discord", "twilight", "extractors"]
categories = ["rust-patterns"]

[dependencies]
twilight-model = "0.17"
twilight-util = { version = "0.17", features = ["builder"] }

serde = { version = "1", optional = true }
serde_json = { version = "1", optional = true }

[features]
modal_submit = ["serde"]
serde = ["dep:serde", "dep:serde_json"]
